--- a/src/components/Courses/components/CourseCard/CourseCard.css
+++ b/src/components/Courses/components/CourseCard/CourseCard.css
@@ -1,29 +1,36 @@
 .courseCard {
     border: solid 2px aquamarine;
-    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding: 20px 30px;
+}
+
+.courseDescription {
+    width: 55%;
 }
 
 .courseInfo {
-    width: 60%;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 h3 {
     margin: 10px auto;
 }
 
+p {
+    margin-top: 0;
+}
+
 Button {
     margin: 5px auto;
 }
 
-p {
-    margin: 5px, auto;
-}
-
 .overflow-ellipsis {
-    width: 30em;
+    width: 20em;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
