--- a/src/common/Button/Button.css
+++ b/src/common/Button/Button.css
@@ -1,9 +1,8 @@
-button {
+.Btn {
     padding: 5px auto;
     border: solid 1px purple;
     border-radius: 2px;
     width: 140px;
     height: 2.2rem;
     font-size: 1rem;
-    margin: auto 20px;
 }
