--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,4 @@
-header {
+.header {
     border: solid 2px deeppink;
     margin: 20px;
     padding: 25px;
@@ -11,6 +11,7 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 .userName {
