--- a/src/common/Input/Input.css
+++ b/src/common/Input/Input.css
@@ -1,8 +1,18 @@
-input {
-    width: 400px;
+.inputBlock {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+}
+
+.input {
+    width: 350px;
     height: 2.2rem;
     padding: 0 30px;
-    margin: 0;
+    margin: 0 20px 0 0;
     font-size: 1rem;
     border: solid 1px goldenRod;
+}
+
+.label {
+    margin-bottom: 5px;
 }
