--- a/src/components/CreateCourse/components/Authors/Authors.css
+++ b/src/components/CreateCourse/components/Authors/Authors.css
@@ -1,12 +1,26 @@
 .allAuthorsBlock {
-    display: flex; 
+    width: 100%;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
 
+.allAuthorsList {
+    width: 70%;
+    margin: 0;
+    padding: 0;
+}
+
+.authorItem {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .author {
-    display: flex; 
+    width: 100%;
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
